--- a/girlfriend-gift-collection-master/chat-want-to-say/index.html
+++ b/girlfriend-gift-collection-master/chat-want-to-say/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="/girlfriend-gift-collection-master/src/main.js"></script>
-    <script src="/girlfriend-gift-collection-master/js/zepto.min.js"></script>
+    <script type="module" src="src/main.js"></script>
+    <script src="js/zepto.min.js"></script>
   </body>
 </html>
